--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+settings.yaml
+client_secrets.json
+Downloads/
+Latest/
+temp*
+!template.j2
+credentials.json
+token.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
